--- a/custom.css
+++ b/custom.css
@@ -67,6 +67,10 @@ li {
     margin-top:0.3em;
 }
 
+div.MathJax_Display {
+    margin-top: 2ex;
+}
+
 div.input_area {
     background-color: #FCFCFC;
 }
